--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             </li>
             <li class="header__link"><a href="" class="navi">Контакти</a></li>
           </ul>
+
+          <button class="header__burger js-open-menu" type="button">
+            <svg width="40px" height="40px">
+              <use href="./images/symbol-defs.svg#icon-burger"></use>
+            </svg>
+          </button>
         </nav>
         <ul class="contact">
           <li class="contact__link">
@@ -50,11 +56,6 @@
               +38 096 111 11 11</a>
           </li>
         </ul>
-        <button class="header__burger js-open-menu" type="button">
-          <svg width="40px" height="40px">
-            <use href="./images/symbol-defs.svg#icon-burger"></use>
-          </svg>
-        </button>
       </div>
     </header>
 
@@ -498,12 +499,12 @@
           </svg>
         </button>
         <ul class="mobile-menu__list">
-          <li class="mobile-menu__link"><a href="./" class="navi">Студія</a></li>
-          <li class="mobile-menu__link"><a href="./portfolio.html" class="navi">Портфоліо</a></li>
-          <li class="mobile-menu__link"><a href="" class="navi">Контакти</a></li>
+          <li class="mobile-menu__item-navi"><a href="./"class="mobile-menu__link">Студія</a></li>
+          <li class="mobile-menu__item"><a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a></li>
+          <li><a href=""class="mobile-menu__link">Контакти</a></li>
         </ul>
         <ul class="menu-contact">
-          <li>
+          <li class="menu-contact__item">
             <a href="tel:+380961111111"  class="menu-contact__tel">+38 096 111 11 11</a>
           </li>
           <li>
