Вносить зміни у властивості кожної секції

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <img
                 src="./images/igor.jpg"
                 alt="фото учасника команди Ігора Дем'яненка"
-                width="270"
+                width="100%"
               />
               <div class="comand-block">
                 <h3 class="comand-block__title">Ігор Дем'яненко</h3>
@@ -219,7 +219,7 @@
               <img
                 src="./images/olga.jpg"
                 alt="фото учасника команди Ольги Рєпіної"
-                width="270"
+                width="100%"
               />
               <div class="comand-block">
                 <h3 class="comand-block__title">Ольга Рєпіна</h3>
@@ -261,7 +261,7 @@
               <img
                 src="./images/mukola.jpg"
                 alt="фото учасника команди Миколи Тарасова"
-                width="270"
+                width="100%"
               />
               <div class="comand-block">
                 <h3 class="comand-block__title">Микола Тарасов</h3>
@@ -305,7 +305,7 @@
               <img
                 src="./images/myhailo.jpg"
                 alt="фото учасника команди Михайла Єрмакова"
-                width="270"/>
+                width="100%"/>
               <div class="comand-block">
                 <h3 class="comand-block__title">Михайло Єрмаков</h3>
                 <p class="comand-block__text">UI Designer</p>
