--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
             <li class="comand__photos-block">
               <picture>
                 <source srcset="./images/igor-desktop.jpg 1x, ./images/igor-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-                <source srcset="./images/igor-tablet.jpg 1x, ./images/igor-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/igor-mobile.jpg 1x, ./images/igor-mobile@2x.jpg 2x" media="(min-width: 480px)">
+                <source srcset="./images/igor-tablet.jpg 1x, ./images/igor-tablet@2x.jpg 2x" media="(min-width: 787px)">
+                <source srcset="./images/igor-mobile.jpg 1x, ./images/igor-mobile@2x.jpg 2x" media="(max-width: 767px)">
                  <img
                 src="./images/igor.jpg"
                 alt="фото учасника команди Ігора Дем'яненка"/>
@@ -233,8 +233,8 @@
             <li class="comand__photos-block">
               <picture>
                 <source srcset="./images/olga-desktop.jpg 1x , ./images/olga-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-                <source srcset="./images/olga-tablet.jpg 1x , ./images/olga-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/olga-mobile.jpg 1x, ./images/olga-mobile@2x.jpg 2x" media="(min-width: 480px)">
+                <source srcset="./images/olga-tablet.jpg 1x , ./images/olga-tablet@2x.jpg 2x" media="(min-width: 787px)">
+                <source srcset="./images/olga-mobile.jpg 1x, ./images/olga-mobile@2x.jpg 2x" media="(max-width: 767px)">
                 <img
                 src="./images/olga.jpg"
                 alt="фото учасника команди Ольги Рєпіної"
@@ -280,8 +280,8 @@
             <li class="comand__photos-block">
               <picture>
                 <source srcset="./images/mukola-desktop.jpg 1x , ./images/mukola-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-                <source srcset="./images/mukola-tablet.jpg 1x , ./images/mukola-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/mukola-mobile.jpg 1x, ./images/mukola-mobile@2x.jpg 2x" media="(min-width: 480px)">
+                <source srcset="./images/mukola-tablet.jpg 1x , ./images/mukola-tablet@2x.jpg 2x" media="(min-width: 787px)">
+                <source srcset="./images/mukola-mobile.jpg 1x, ./images/mukola-mobile@2x.jpg 2x" media="(max-width: 767px)">
                 <img
                 src="./images/mukola.jpg"
                 alt="фото учасника команди Миколи Тарасова"
@@ -329,8 +329,8 @@
             <li class="comand__photos-block">
               <picture>
                 <source srcset="./images/myhailo-desktop.jpg 1x , ./images/myhailo-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-                <source srcset="./images/myhailo-tablet.jpg 1x , ./images/myhailo-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                <source srcset="./images/myhailo-mobile.jpg 1x, ./images/myhailo-mobile@2x.jpg 2x" media="(min-width: 480px)">
+                <source srcset="./images/myhailo-tablet.jpg 1x , ./images/myhailo-tablet@2x.jpg 2x" media="(min-width: 787px)">
+                <source srcset="./images/myhailo-mobile.jpg 1x, ./images/myhailo-mobile@2x.jpg 2x" media="(max-width: 767px)">
                 <img
                 src="./images/myhailo.jpg"
                 alt="фото учасника команди Михайла Єрмакова"/>
