Редагує мобільну версію

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
           </svg>
         </button>
         <ul class="mobile-menu__list">
-          <li class="mobile-menu__item-navi"><a href="./"class="mobile-menu__link">Студія</a></li>
+          <li class="mobile-menu__item-navi"><a href="./"class="mobile-menu__link mobile-active">Студія</a></li>
           <li class="mobile-menu__item"><a href="./portfolio.html" class="mobile-menu__link">Портфоліо</a></li>
           <li><a href=""class="mobile-menu__link">Контакти</a></li>
         </ul>
