--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
     </header>
 
     <main>
-      <section class="features">
+      <section class="features-portfolio">
         <div class="container">
           <h1 class="features__title">Портфоліо</h1>
           <ul class="features__button">
