--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <li class="activity-list__photo">
               <div class="activity-list__photo-thumb">
              <picture>
-                <source srcset="./images/kode.jpg 1x, ./images/kode@2x.jpg 2x" media="(min-width:1200px)">
+                <source srcset="./images/kode.jpg 1x, ./images/kode@2x.jpg 2x">
               <img
                 class="activity-list__img"
                 src="./images/img3.jpg"
@@ -522,7 +522,7 @@
 
 
     <div class="mobile-menu js-menu-container">
-      <div class="container">
+      <div class="container-mobile">
         <button class="mobile-menu__close js-close-menu" type="button">
           <svg width="30px" height="30px">
             <use href="./images/symbol-defs.svg#icon-close"></use>
@@ -542,9 +542,9 @@
           </li>
         </ul>
         <ul class="menu-socials">
-          <li><a href="" class="menu-socials__link">Instagram</a></li>
-          <li><a href="" class="menu-socials__link">Twitter</a></li>
-          <li><a href="" class="menu-socials__link">Facebook</a></li>
+          <li><a href="" class="menu-socials__link">Instagram<span class="line">|</span></a></li>
+          <li><a href="" class="menu-socials__link">Twitter<span class="line">|</span></a></li>
+          <li><a href="" class="menu-socials__link">Facebook<span class="line">|</span></a></li>
           <li><a href="" class="menu-socials__link">LinkedIn</a> </li>
         </ul>
       </div>
